spacing error fix

--- a/palawiki/static/main.css
+++ b/palawiki/static/main.css
@@ -336,7 +336,7 @@ input.invalid {
         border-radius: .2rem !important;
     }
     .label_div {
-        margin-top: 4px;
+        margin-top: 6px;
         margin-bottom: 4px;
     }
 }
